remove if condition on pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,8 +79,8 @@ jobs:
 #          name: apk artefact upload
 #          path: "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk"
       - name: Linux Release
+        id: release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
