added on create tag trigger

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,9 @@ env:
   JAVA_DISTRIBUTION: "zulu"
 
 on:
-  push:
-    branches:
-      - "main"
+  create:
     tags:
-      - "*"
+      - v*
 
 jobs:
   # job 1 : app_testing
